kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-test
  namespace: devops
  labels:
    app: backend-test
spec:
  replicas: 6
  selector:
    matchLabels:
      app: backend-test
  template:
    metadata:
      labels:
        app: backend-test
    spec:
      containers:
      - name: backend-test
        image: localhost:8082/backend-test:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: backend-test
  namespace: devops
  labels:
    app: backend-test
spec:
  selector:
    app: backend-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend-test
  namespace: devops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rauseo.devops.cl
    secretName: backend-test-tls
  rules:
  - host: rauseo.devops.cl
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-test
            port:
              number: 80
